<resources>
    <string name="title">BvC Vertretungsplan</string>
    <string name="app_name">BvC\nVertretungsplan</string>

    <!-- login -->
    <string name="login">Log In</string>
    <string name="username">Nutzername</string>
    <string name="password">Passwort</string>
    <string name="fail">Die eingegebenen Daten sind falsch</string>
    <string name="fail_offline">Du bist offline</string>
    <string name="info">Die Login Daten findest du im Intranet</string>

    <!--  -->
    <string name="ok">OK</string>
    <string name="back">ZURÜCK</string>
    <string name="skipCourses">Alle Kurse</string>
    <string name="skip">ÜBERSPRINGEN</string>
    <string name="courses">KURSE</string>
    <string name="cancel">ABBRECHEN</string>
    <string name="additional">Zusatz</string>
    <string name="additionalInfo">Trage hier einzeln Kurse ein, die noch nicht angezeigt wurden, wie zum Beispiel Sportkurse oder Kurse mit mehreren Ziffern (en21).</string>
    <string name="onwards">WEITER</string>
    <string name="complete">FERTIG</string>

    <string name="noEntries">Keine Vertretung vorhanden</string>

    <!-- Template -->
    <string name="temp_hours">%1$d-%2$d</string>
    <string name="temp_class">%1$s</string>

    <!-- ################# Error messages ####################-->
    <!-- Title -->
    <string name="omg">OH!</string>
    <string name="holi">…es sind Ferien</string>

    <!-- Error Text -->
    <string name="err_no_internet">Es konnte keine Verbindung mit dem Internet hergestellt werden</string>
    <string name="err_io_exception">Es konnte keine Verbindung zum Server hergestellt werden</string>
    <string name="err_other_exception">Beim lesen der Daten ist ein Fehler aufgetreten</string>

    <string name="err_holidays">Dir ist langweilig? Bewerte die App im PlayStore! Schreib, wie dir diese App gefällt und welche Funktionen du dir für die Zukunft wünschst.\n\n~Titaniel Productions</string>


    <string name="res_offline">OFFLINE MODUS</string>
    <string name="res_try_again">NOCHMAL</string>

    <string name="chooseClass">Wähle deine Klasse</string>
    <string name="chooseCourses">Wähle deine Kurse</string>

    <string name="monday_caps">MONTAG</string>
    <string name="tuesday_caps">DIENSTAG</string>
    <string name="wednesday_caps">MITTWOCH</string>
    <string name="thursday_caps">DONNERSTAG</string>
    <string name="friday_caps">FREITAG</string>

    <string name="monday_short">MO</string>
    <string name="tuesday_short">DI</string>
    <string name="wednesday_short">MI</string>
    <string name="thursday_short">DO</string>
    <string name="friday_short">FR</string>

    <string name="january">Januar</string>
    <string name="february">Februar</string>
    <string name="march">März</string>
    <string name="april">April</string>
    <string name="may">Mai</string>
    <string name="june">Juni</string>
    <string name="juli">Juli</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">Oktober</string>
    <string name="november">November</string>
    <string name="december">Dezember</string>

    <string name="january_short">Jan</string>
    <string name="february_short">Feb</string>
    <string name="march_short">Mär</string>
    <string name="april_short">Apr</string>
    <string name="may_short">Mai</string>
    <string name="june_short">Jun</string>
    <string name="juli_short">Jul</string>
    <string name="august_short">Aug</string>
    <string name="september_short">Sep</string>
    <string name="october_short">Okt</string>
    <string name="november_short">Nov</string>
    <string name="december_short">Dez</string>

</resources>
