<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="16dp"
        android:background="@color/snow" />

    <ImageView
        android:id="@+id/ivErr"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:tint="@color/accent" />

    <TextView
        android:id="@+id/ivTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:letterSpacing="0.1"
        android:text="@string/omg"
        android:textAlignment="center"
        android:textColor="@color/snow"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:alpha="1"
        android:fontFamily="sans-serif-light"
        android:includeFontPadding="false"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/err_io_exception"
        android:textAlignment="center"
        android:textColor="@color/snow"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnErrAgain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-medium"
            android:includeFontPadding="false"
            android:text="@string/res_try_again"
            android:textColor="@color/snow"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnErrOffline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-medium"
            android:includeFontPadding="false"
            android:text="@string/res_offline"
            android:textColor="@color/accent"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:background="@color/snow" />

</LinearLayout>