<?xml version="1.0" encoding="utf-8"?>
<!-- Layout für die das Kurswahl Fragment siehe CoursePickerFragment-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    tools:visibility="visible">

    <org.apmem.tools.layouts.FlowLayout
        android:id="@+id/lySelected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-3dp"
        android:layout_marginStart="-3dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/course_picker_selected_courses"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:paddingEnd="3dp"
        android:paddingStart="3dp"
        android:paddingTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tvChooseCourse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvChooseCourse" />

    <TextView
        android:id="@+id/tvChooseCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/chooseCourses"
        android:textColor="@color/snow"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002" />

    <LinearLayout
        android:id="@+id/lyStandard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:text="Mathe"
            android:textColor="@color/snow"
            android:textSize="22sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/courseSpecList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:overScrollMode="never"
            tools:layout_height="40dp" />

        <LinearLayout
            android:id="@+id/lyChoice"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:paddingTop="16dp"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="6dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLeft"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="0.5"
                android:background="@drawable/course_background"
                android:fontFamily="sans-serif"
                android:includeFontPadding="false"
                android:text="MA2"
                android:textAllCaps="false"
                android:textColor="@color/accent"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnRight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="0.5"
                android:background="@drawable/course_background"
                android:fontFamily="sans-serif"
                android:includeFontPadding="false"
                android:text="ma2"
                android:textAllCaps="false"
                android:textColor="@color/accent"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyBackSkip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBackCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:alpha="0.4"
                android:background="@android:color/transparent"
                android:text="@string/cancel"
                android:textColor="@color/snow"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btnSkip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:alpha="0.4"
                android:background="@android:color/transparent"
                android:text="@string/skip"
                android:textColor="@color/snow"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyAdditional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvAdditional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:fontFamily="sans-serif"
            android:text="@string/additional"
            android:textColor="@color/snow"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvAdditionalInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/additionalInfo"
            android:textAlignment="center"
            android:textColor="@color/additionalInfo"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/tCourse"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/snow"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:alpha="0.4"
                android:background="@android:color/transparent"
                android:text="@string/back"
                android:textColor="@color/snow"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:alpha="0.4"
                android:background="@android:color/transparent"
                android:text="@string/onwards"
                android:textColor="@color/snow"
                android:textSize="13sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnComplete"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_outline_background"
            android:text="@string/complete"
            android:textColor="@color/accent"
            android:textSize="13sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>