<?xml version="1.0" encoding="utf-8"?>
<!-- Layout für das Login Fragment... siehe LoginFragment -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <ImageView
        android:visibility="invisible"
        tools:visibility="visible"
        android:id="@+id/ivIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/login"
        android:tint="@color/snow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <TextView
        android:visibility="invisible"
        tools:visibility="visible"
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/aqua"
        android:text="@string/title"
        android:textColor="@color/snow"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivIcon" />

    <FrameLayout
        android:visibility="invisible"
        tools:visibility="visible"
        android:id="@+id/lyUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivIcon"
        app:layout_constraintVertical_bias="0.402">

        <EditText
            android:id="@+id/tUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:lines="1"
            android:paddingEnd="8dp"
            android:paddingStart="36dp"
            android:textColor="@color/snow"
            android:textColorHint="@color/hintColor"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/ivUser"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_account"
            android:tint="@color/snow" />

    </FrameLayout>

    <FrameLayout
        android:visibility="invisible"
        tools:visibility="visible"
        android:id="@+id/lyPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyUser">

        <EditText
            android:id="@+id/tPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingEnd="8dp"
            android:paddingStart="36dp"
            android:textColor="@color/snow"
            android:textColorHint="@color/hintColor"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/ivPassword"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_lock"
            android:tint="@color/loginIcon" />

    </FrameLayout>

    <TextView
        android:visibility="invisible"
        tools:visibility="visible"
        android:id="@+id/tvFail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fail"
        android:textColor="@color/accent"
        app:layout_constraintBottom_toTopOf="@+id/lyUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyLoginText" />

    <LinearLayout
        android:visibility="invisible"
        tools:visibility="visible"
        android:id="@+id/lyLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/lyUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/dividerTop"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/snow" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login"
            android:textColor="@color/snow"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:visibility="invisible"
        tools:visibility="visible"
        android:id="@+id/btnOk"
        android:layout_width="120dp"
        android:layout_height="49dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/btn_fill_background"
        android:elevation="8dp"
        android:text="@string/ok"
        android:textColor="@color/snow"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyPassword" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:indeterminateTint="@color/accent"
        android:soundEffectsEnabled="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btnOk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnOk" />

</android.support.constraint.ConstraintLayout>